# MSME-SURVIVAL

./: .gitignore
MSME-Beacon/: .gitignore  README.md  STARTUP_GUIDE.md  package-lock.json  package.json  run_dev.sh  test_fixed_setup.js
MSME-Beacon/backend/: package-lock.json  package.json  requirements.txt  server.js
MSME-Beacon/backend/config/: authConfig.js  db.js
MSME-Beacon/backend/controllers/: businessController.js  dashboardController.js  insightsController.js  profileController.js  recommendationController.js  riskController.js  settingsController.js  userController.js
MSME-Beacon/backend/middleware/: authMiddleware.js  errorMiddleware.js
MSME-Beacon/backend/models/: Business.js  Dashboard.js  Insights.js  Profile.js  Recommendation.js  Risk.js  Settings.js  User.js
MSME-Beacon/backend/routes/: businessRoutes.js  dashboardRoutes.js  insightsRoutes.js  profileRoutes.js  recommendationRoutes.js  riskRoutes.js  settingsRoutes.js  userRoutes.js
MSME-Beacon/frontend/: package-lock.json  package.json  tailwind.config.js
MSME-Beacon/frontend/public/: index.html
MSME-Beacon/frontend/src/: App.js  index.js
MSME-Beacon/frontend/src/assets/: BeaconLogo.jsx
MSME-Beacon/frontend/src/components/: Header.js  Login.js  NavigationBar.js  Signup.js
MSME-Beacon/frontend/src/context/: PredictionContext.js
XGBoost-Model/: Deployment_ Instructions.txt  README.md  activate_venv.sh  config.env  fix_imports.py  pyproject.toml  requirements.txt  setup.py  setup_dependencies.sh  xgboost_train.py
XGBoost-Model/ml_api/: main.py  server.py  test_api.py
XGBoost-Model/model/: ensemble_trained_model.pkl  feature_names.pkl  label_encoders.pkl  scaler.pkl
(+21 files in other folders)
